--- a/MedioClinic/Web.config
+++ b/MedioClinic/Web.config
@@ -5,7 +5,9 @@
   -->
 <configuration>
   
-  <connectionStrings configSource="Config\ConnectionStrings.config" />
+  <connectionStrings configSource="Config\ConnectionStrings.config">
+    <add name="CMSConnectionString" connectionString="" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
