--- a/Business/Business.csproj
+++ b/Business/Business.csproj
@@ -267,6 +267,18 @@
     <Reference Include="GlobalLink.Connect, Version=4.18.2.0, Culture=neutral, PublicKeyToken=946d606070618fd4, processorArchitecture=MSIL">
       <HintPath>..\packages\GlobalLink.Connect.4.18.3.1\lib\net46\GlobalLink.Connect.dll</HintPath>
     </Reference>
+    <Reference Include="Kentico.Content.Web.Mvc, Version=12.0.0.0, Culture=neutral, PublicKeyToken=834b12a258f213f9, processorArchitecture=MSIL">
+      <HintPath>..\packages\Kentico.AspNet.Mvc.Libraries.12.0.15\lib\net461\Kentico.Content.Web.Mvc.dll</HintPath>
+    </Reference>
+    <Reference Include="Kentico.Membership, Version=12.0.0.0, Culture=neutral, PublicKeyToken=834b12a258f213f9, processorArchitecture=MSIL">
+      <HintPath>..\packages\Kentico.AspNet.Mvc.Libraries.12.0.15\lib\net461\Kentico.Membership.dll</HintPath>
+    </Reference>
+    <Reference Include="Kentico.OnlineMarketing.Web.Mvc, Version=12.0.0.0, Culture=neutral, PublicKeyToken=834b12a258f213f9, processorArchitecture=MSIL">
+      <HintPath>..\packages\Kentico.AspNet.Mvc.Libraries.12.0.15\lib\net461\Kentico.OnlineMarketing.Web.Mvc.dll</HintPath>
+    </Reference>
+    <Reference Include="Kentico.Web.Mvc, Version=12.0.0.0, Culture=neutral, PublicKeyToken=834b12a258f213f9, processorArchitecture=MSIL">
+      <HintPath>..\packages\Kentico.AspNet.Mvc.Libraries.12.0.15\lib\net461\Kentico.Web.Mvc.dll</HintPath>
+    </Reference>
     <Reference Include="LinqToTwitter.net, Version=4.0.0.0, Culture=neutral, PublicKeyToken=957107be965c25d9, processorArchitecture=MSIL">
       <HintPath>..\packages\linqtotwitter.4.0.0\lib\net45\LinqToTwitter.net.dll</HintPath>
     </Reference>
@@ -544,6 +556,18 @@
     <Compile Include="Generated\Pages\SocialLinkProvider.generated.cs" />
     <Compile Include="Generated\Pages\SocialLinksFolder.generated.cs" />
     <Compile Include="Generated\Pages\SocialLinksFolderProvider.generated.cs" />
+    <Compile Include="Identity\Extensions\UserExtensions.cs" />
+    <Compile Include="Identity\Helpers\UserHelper.cs" />
+    <Compile Include="Identity\IMedioClinicSignInManager.cs" />
+    <Compile Include="Identity\IMedioClinicUserManager.cs" />
+    <Compile Include="Identity\IMedioClinicUserStore.cs" />
+    <Compile Include="Identity\MedioClinicSignInManager.cs" />
+    <Compile Include="Identity\MedioClinicUserManager.cs" />
+    <Compile Include="Identity\MedioClinicUserStore.cs" />
+    <Compile Include="Identity\Models\Gender.cs" />
+    <Compile Include="Identity\Models\MedioClinicUser.cs" />
+    <Compile Include="Identity\Proxies\IKenticoUserStore.cs" />
+    <Compile Include="Identity\Proxies\KenticoUserStore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\BaseRepository.cs" />
     <Compile Include="Repository\Company\CompanyRepository.cs" />
@@ -587,4 +611,11 @@
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\packages\Kentico.LanguagePack.English.12.0.15\build\Kentico.LanguagePack.English.targets" Condition="Exists('..\packages\Kentico.LanguagePack.English.12.0.15\build\Kentico.LanguagePack.English.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\Kentico.LanguagePack.English.12.0.15\build\Kentico.LanguagePack.English.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Kentico.LanguagePack.English.12.0.15\build\Kentico.LanguagePack.English.targets'))" />
+  </Target>
 </Project>
