--- a/MedioClinic/Web.config
+++ b/MedioClinic/Web.config
@@ -6,7 +6,6 @@
 <configuration>
   
   <connectionStrings configSource="Config\ConnectionStrings.config">
-    <add name="CMSConnectionString" connectionString="" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -17,6 +16,7 @@
     <add key="CMSApplicationName" value="Default Web Site/Kentico12_MedioClinic" />
     <add key="CMSHashStringSalt" value="04177380-ebe4-43bd-8e3b-fb312187da94" />
     <add key="CMSCIRepositoryPath" value="C:\inetpub\wwwroot\Kentico12\CMS\App_Data\CIRepository" />
+    <!--<add key="owin:appStartup" value="MedioClinic.Startup" />-->
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
@@ -46,7 +46,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.1.0.0" newVersion="3.1.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" culture="neutral" />
