--- a/MedioClinic/MedioClinic.csproj
+++ b/MedioClinic/MedioClinic.csproj
@@ -15,7 +15,7 @@
     <RootNamespace>MedioClinic</RootNamespace>
     <AssemblyName>MedioClinic</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
-    <UseIISExpress>false</UseIISExpress>
+    <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
@@ -781,7 +781,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>50542</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost/Kentico12_MedioClinic</IISUrl>
+          <IISUrl>http://localhost:50542/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
