--- a/MedioClinic/packages.config
+++ b/MedioClinic/packages.config
@@ -9,6 +9,7 @@
   <package id="Castle.Core" version="4.2.0" />
   <package id="Castle.Windsor" version="4.1.0" />
   <package id="DocumentFormat.OpenXml" version="2.7.2" />
+  <package id="Enums.NET" version="2.3.2" targetFramework="net461" />
   <package id="Facebook" version="6.4.2" />
   <package id="GlobalLink.Connect" version="4.18.3.1" />
   <package id="Kentico.AspNet.Mvc" version="12.0.15" targetFramework="net461" />
