--- a/Business/Business.csproj
+++ b/Business/Business.csproj
@@ -577,6 +577,8 @@
     <Compile Include="Identity\Proxies\IKenticoUserStore.cs" />
     <Compile Include="Identity\Proxies\KenticoUserStore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\Avatar\AvatarRepository.cs" />
+    <Compile Include="Repository\Avatar\IAvatarRepository.cs" />
     <Compile Include="Repository\BaseRepository.cs" />
     <Compile Include="Repository\Company\CompanyRepository.cs" />
     <Compile Include="Repository\Company\CompanyServiceRepository.cs" />
