--- a/MedioClinic/MedioClinic.csproj
+++ b/MedioClinic/MedioClinic.csproj
@@ -722,9 +722,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\AccountManagerResultStates.cs" />
+    <Compile Include="Models\ProfileManagerResultStates.cs" />
     <Compile Include="Models\Profile\IUserViewModel.cs" />
     <Compile Include="Utils\AccountManager.cs" />
+    <Compile Include="Utils\BaseIdentityManager.cs" />
     <Compile Include="Utils\IAccountManager.cs" />
+    <Compile Include="Utils\IProfileManager.cs" />
+    <Compile Include="Models\IdentityManagerResult.cs" />
+    <Compile Include="Utils\ProfileManager.cs" />
     <Compile Include="Utils\UserViewModelBinder.cs" />
     <Compile Include="Models\Account\EmailViewModel.cs" />
     <Compile Include="Models\Account\PasswordViewModel.cs" />
