--- a/MedioClinic/MedioClinic.csproj
+++ b/MedioClinic/MedioClinic.csproj
@@ -723,9 +723,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\AccountManagerResultStates.cs" />
+    <Compile Include="Models\Account\AccountManagerResultStates.cs" />
     <Compile Include="Models\MessageType.cs" />
-    <Compile Include="Models\ProfileManagerResultStates.cs" />
+    <Compile Include="Models\Profile\ProfileManagerResultStates.cs" />
     <Compile Include="Models\Profile\IUserViewModel.cs" />
     <Compile Include="Models\UserMessage.cs" />
     <Compile Include="Utils\AccountManager.cs" />
