Modifies connection strings for MaGl-GLASBAK
(cherry picked from commit 944b73dd9b586ec0229a1febf40be9c6c60fee4d)

--- a/CMS/web.config
+++ b/CMS/web.config
@@ -20,10 +20,11 @@
     <!-- Note: Changing the 'CMSHashStringSalt' value may prevent macros from resolving correctly, and break dialog links and images on your website. 
     To fix these issues, you need to globally re-sign macros in 'System -> Macros -> Signatures' or manually re-save the affected content. -->
     <add key="CMSHashStringSalt" value="04177380-ebe4-43bd-8e3b-fb312187da94" />
+    <add key="CMSDisplayApplicationErrorMessages" value="true"/>
   </appSettings>
   <connectionStrings>
     <clear />
-    <add name="CMSConnectionString" connectionString="Data Source=localhost;Initial Catalog=MedioClinic;Integrated Security=True;Persist Security Info=False;Connect Timeout=60;Encrypt=False;Current Language=English;" />
+    <add name="CMSConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=MedioClinic;Integrated Security=True;Persist Security Info=False;Connect Timeout=60;Encrypt=False;Current Language=English;" />
   </connectionStrings>
   <system.web>
     <pages validateRequest="false" clientIDMode="AutoID">
