--- a/MedioClinic/Config/ConnectionStrings.config
+++ b/MedioClinic/Config/ConnectionStrings.config
@@ -1,4 +1,4 @@
 <connectionStrings>
   <clear />
-  <add name="CMSConnectionString" connectionString="Data Source=localhost;Initial Catalog=MedioClinic;Integrated Security=True;Persist Security Info=False;Connect Timeout=60;Encrypt=False;Current Language=English;" />
+  <add name="CMSConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=MedioClinic;Integrated Security=True;Persist Security Info=False;Connect Timeout=60;Encrypt=False;Current Language=English;" />
 </connectionStrings>
