--- a/MedioClinic/Web.config
+++ b/MedioClinic/Web.config
@@ -5,9 +5,7 @@
   -->
 <configuration>
   
-  <connectionStrings configSource="Config\ConnectionStrings.config">
-    <add name="CMSConnectionString" connectionString="" />
-  </connectionStrings>
+  <connectionStrings configSource="Config\ConnectionStrings.config" />
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
